--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <h1>Test Page for WDD 230</h1>
+    <p>This is how we do eettt, this is how we do it, la da da daa oh oh oh</p>
 </body>
 
 </html>
