--- a/index.html
+++ b/index.html
@@ -2,12 +2,57 @@
 <html lang="en-us">
 
 <head>
-    <title>Test Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="author" content="Rachael S Varady" />
+    <meta name="description"
+        content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development Brother John Allred" />
+    <link href="main.css" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico" />
+    <link href="print.css" rel="stylesheet" media="print" />
+    <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)" />
+    <link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+
+    <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
 </head>
 
 <body>
-    <h1>Test Page for WDD 230</h1>
-    <p>This is how we do eettt, this is how we do it, la da da daa oh oh oh</p>
+    <header>
+        <img src=images/Rachael.jpeg alt="Profile Image: caucasian woman in airplane holding chain with letter A charm">
+        <h1 id="h1">Rachael S Varady</h1>
+    </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="chamber/siteplan.html">Site Plan</a>
+        <a href="chamber/">Chamber</a>
+        <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
+        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p27#p27"
+            target="_blank">Scripture</a>
+    </nav>
+    <main>
+        <h2>WDD 230: Web Frontend Development</h2>
+        <section class="card">
+            <h3>Learning Activities</h3>
+            <ul class="activities">
+                <li><a href="#">Activity 1</a></li>
+                <li><a href="#">Activity 2</a></li>
+            </ul>
+        </section>
+        <section class="card">
+            <h3>Information</h3>
+            <p>Weather:</p>
+            <p>Number of Visits:</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; <span id="currentYear"></span> Rachael S Varady Florida/USA</p>
+        <p id="lastModified"></p>
+    </footer>
+
+    <script src="scripts/getDates.js"></script>
+
 </body>
 
 </html>
