--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <img src=images/Rachael.jpeg alt="Profile Image: caucasian woman in airplane holding chain with letter A charm">
+        <img src=images/Rachael.jpg alt="Profile Image: caucasian woman in airplane holding chain with letter A charm">
         <h1 id="h1">Rachael S Varady</h1>
     </header>
 
