--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="author" content="Rachael S Varady" />
-    <meta name="description"
-        content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development Brother John Allred" />
-    <link href="main.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Rachael S Varady">
+    <meta name="description" content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development">
+    <link href="main.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico" />
     <link href="print.css" rel="stylesheet" media="print" />
     <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)" />
     <link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-
     <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
 </head>
-
 <body>
     <header>
         <img src=images/Rachael.jpg alt="Profile Image: caucasian woman in airplane holding chain with letter A charm">
         <h1 id="h1">Rachael S Varady</h1>
     </header>
-
     <nav>
         <a href="#">Home</a>
         <a href="chamber/siteplan.html">Site Plan</a>
@@ -45,14 +40,10 @@
             <p>Number of Visits:</p>
         </section>
     </main>
-
     <footer>
-        <p>&copy; <span id="currentYear"></span> Rachael S Varady Florida/USA</p>
+        <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
+        <script src="scripts/getDates.js"></script>
     </footer>
-
-    <script src="scripts/getDates.js"></script>
-
 </body>
-
 </html>
