--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Rachael S Varady">
     <meta name="description" content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development">
-    <link href="main.css" rel="stylesheet">
+    <link href="base.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico" />
     <link href="print.css" rel="stylesheet" media="print" />
     <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)" />
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src=images/Rachael.jpg alt="Profile Image: caucasian woman in airplane holding chain with letter A charm">
+        <img src=images/profile.jpg alt="Rachael Varady Profile Image" width="75" height="100">
         <h1 id="h1">Rachael S Varady</h1>
     </header>
     <nav>
