--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <meta name="author" content="Rachael S Varady">
+    <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
     <meta name="description" content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development">
-    <link href="base.css" rel="stylesheet">
+    <meta name="author" content="Rachael S Varady">
+    
+    <link href="styles/base.css" rel="stylesheet">
+    <link href="styles/larger.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico" />
     <link href="print.css" rel="stylesheet" media="print" />
     <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)" />
     <link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
-    <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
+
 </head>
 <body>
     <header>
-        <img src=images/profile.jpg alt="Rachael Varady Profile Image" width="75" height="100">
+        <img src=images/profile.jpg alt="Rachael Varady Profile Image" width="75" height="175">
         <h1 id="h1">Rachael S Varady</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="chamber/siteplan.html">Site Plan</a>
-        <a href="chamber/">Chamber</a>
-        <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p27#p27"
-            target="_blank">Scripture</a>
+        <ul>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="chamber/siteplan.html">Site Plan</a></li>
+        <li><a href="chamber/">Chamber</a></li>
+        <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p27#p27"
+            target="_blank">Scripture</a></li>
+        </ul>
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
