--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)" />
     <link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
