--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)" />
     <link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -35,8 +35,8 @@
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section class="card">
-            <h3>Learning Activities</h3>
+        <section>
+            <h3 class="card">Learning Activities</h3>
             <ul class="activities">
                 <li><a href="#">Activity 1</a></li>
                 <li><a href="#">Activity 2</a></li>
