meta char8 fixed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
     <meta name="description" content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development">
