--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
-    <link rel="icon" href="favicon.ico" />
-    <link href="print.css" rel="stylesheet" media="print" />
-    <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)" />
-    <link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,3 +51,8 @@
     </footer>
 </body>
 </html>
+<!--
+<link rel="icon" href="favicon.ico">
+<link href="print.css" rel="stylesheet" media="print">
+<link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)">
+<link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
