--- a/index.html
+++ b/index.html
@@ -55,4 +55,4 @@
 <link rel="icon" href="favicon.ico">
 <link href="print.css" rel="stylesheet" media="print">
 <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 600px)">
-<link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+<link rel="preload" href="myFont.woff2" as="font" type="font/woff2" crossorigin="anonymous"> -->
