--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<html lang=
->
-<head>
-  <meta charset=
- >
-  <meta name=
- content=
->
-  <title>Title of Page</title>
-  <meta name="description" content="Use keywords to describe page">
-  <meta name=
- content=
->
-  <link rel="stylesheet" href="styles/filename">
+<html lang="en-us">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Apopka Chamber of Commerce</title>
+  <meta name="description" content="City of Apopka Live and Play and Work Here">
+  <meta name="author" content="Rachael S Varady">
+
+  <link rel="stylesheet" href="styles/chamber-site.css">
 </head>
   <body>
       <header><h1>Page Title | Heading ONE</h1></header>
