--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Apopka Chamber of Commerce</title>
+  <title>Chamber Site Plan</title>
   <meta name="description" content="City of Apopka Live and Play and Work Here">
   <meta name="author" content="Rachael S Varady">
 
   <link rel="stylesheet" href="styles/chamber-site.css">
 </head>
   <body>
-      <header><h1>Page Title | Heading ONE</h1></header>
+      <header><h1>Chamber Site Plan</h1></header>
         <nav></nav>
     <main></main>
         <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</footer>
