--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -43,9 +43,7 @@
 
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
-        <h3>About Us Page Wireframe</h3>
-            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
+        <img src="images/ChamberWirefram.png" alt="Home Page Wireframe" width="700">
         </main>
         <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</footer>
         <script src="scripts/"></script>
