--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -6,19 +6,24 @@
         <title>Chamber Site Plan</title>
         <meta name="description" content="City of Apopka Live and Play and Work Here">
         <meta name="author" content="Rachael S Varady">
-        <link rel="stylesheet" href="styles/chamber-site.css">
-        <link rel="stylesheet" href="styles/chamber-site.css">
-</head>
-  <body>
-      <header><h1>Chamber Site Plan</h1></header>
+        <link href="styles/chamber-site.css" rel="stylesheet">
+        <link href="styles/chamber-site-large.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+    </head>
+    <body>
+      <header><h1>City of Apopka Chamber Site Plan</h1></header>
         <nav></nav>
     <main><h2>Site Name | Apopka Chamber of Commerce</h2>
-
+            
         <h3>Purpose</h3>
-        <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.</p>
+        <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.
+        </p>
         <h3>Scenarios</h3>
-        <p>Who is performing during the Fall Concert Series? How do I pay my water bill? Can I work for the government of Apopka?</p>
-                        
+        <p>Who is performing during the Fall Concert Series? How do I pay my water bill? Can I work for the government of Apopka?
+        </p>
+        <hr>               
         <h2>Color Schema</h2>  
         <h3>Color Palette</h3>
             <p>primary-color #1B7032, secondary-color #3AF06A, accent1-color #83F2A1, accent2-color #3D704A
