--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -26,12 +26,19 @@
         <hr>               
         <h2>Color Schema</h2>  
         <h3>Color Palette</h3>
-            <p>primary-color #1B7032, secondary-color #3AF06A, accent1-color #83F2A1, accent2-color #3D704A
-                <a href="https://coolors.co/1b7032-83f2a1-3af06a-3d704a-2dbd53" target="_blank">https://coolors.co/1b7032-83f2a1-3af06a-3d704a-2dbd53</a>
-            </p>
-            
+        <a href="https://coolors.co/1b7032-83f2a1-3af06a-3d704a-2dbd53" target="_blank">https://coolors.co/1b7032-83f2a1-3af06a-3d704a-2dbd53</a>
+        <table class="sitecolors">
+            <tbody>
+                <tr>
+                    <td class="primary">Primary Color: #1B7032</td>
+                    <td class="secondary">Secondary Color: #3AF06A,</td>
+                    <td class="accent1">Accent Color One: #83F2A1</td>
+                    <td class="accent2">Accent Color Two: #3D704A</td>
+                </tr>
+            </tbody>
+        </table>
+        <hr>
         <h3>Typography</h3>
-                
         <h4>Acme Google Font - Headings Example Font</h4>
         <h4>Inter Google Font - Normal Text/Paragraph Example Font</h4>
             <p>Example text - Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, veritatis</p>
