chamber plan css

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -15,12 +15,14 @@
     <body>
       <header><h1>City of Apopka Chamber Site Plan</h1></header>
         <nav></nav>
-    <main><h2>Site Name | Apopka Chamber of Commerce</h2>
-            
-        <h3>Purpose</h3>
+    <main>
+        <h2>Site Name</h2>
         <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.
         </p>
-        <h3>Scenarios</h3>
+        <h2>Purpose</h2>
+        <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.
+        </p>
+        <h2>Scenarios</h2>
         <p>Who is performing during the Fall Concert Series? How do I pay my water bill? Can I work for the government of Apopka?
         </p>
         <hr>               
