--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -20,7 +20,8 @@
         <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.
         </p>
         <h2>Purpose</h2>
-        <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.
+        <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work. 
+           Information on recreation leagues, how to signup and volunteer.
         </p>
         <h2>Scenarios</h2>
         <p>Who is performing during the Fall Concert Series? How do I pay my water bill? Can I work for the government of Apopka?
