--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -29,14 +29,14 @@
         <hr>               
         <h2>Color Schema</h2>  
         <h3>Color Palette</h3>
-        <a href="https://coolors.co/1b7032-83f2a1-3af06a-3d704a-2dbd53" target="_blank">https://coolors.co/1b7032-83f2a1-3af06a-3d704a-2dbd53</a>
+        <a href="https://coolors.co/3a5b7e-e4f2f1-66a393-a4b2b6-1eaea0" target="_blank">https://coolors.co/3a5b7e-e4f2f1-66a393-a4b2b6-1eaea0</a>
         <table class="sitecolors">
             <tbody>
                 <tr>
-                    <td class="primary">Primary Color: #1B7032</td>
-                    <td class="secondary">Secondary Color: #3AF06A,</td>
-                    <td class="accent1">Accent Color One: #83F2A1</td>
-                    <td class="accent2">Accent Color Two: #3D704A</td>
+                    <td class="primary">Primary Color: #3A5B7E</td>
+                    <td class="secondary">Secondary Color: #E4F2F1,</td>
+                    <td class="accent1">Accent Color 1: #66A393</td>
+                    <td class="accent2">Accent Color 2: #A4B2B6</td>
                 </tr>
             </tbody>
         </table>
