--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -17,7 +17,7 @@
         <nav></nav>
     <main>
         <h2>Site Name</h2>
-        <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.
+        <p>City of Apopka Chamber of Commerce Page, to show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.
         </p>
         <h2>Purpose</h2>
         <p>To show visitors all the wonderful places in Apopka, Florida, USA that they should want to work. 
