--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
     <meta name="description" content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development">
     <meta name="author" content="Rachael S Varady">
-    <link rel="icon" href="favicon.ico">
+    <link href="favicon.ico"  rel="icon">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
 
