--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -47,7 +47,7 @@
             <p>Example text - Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, veritatis</p>
         <h4>Colored Callout Example Font</h4>
             <p>Example text - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati</p>
-
+            <hr>
         <h3>Navigation</h3>
         <nav>
             <a href="#">Home</a>
@@ -55,11 +55,13 @@
             <a href="#">Work</a>
             <a href="#">Contact Us</a>
         </nav>
-
+        <hr>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
+        <div class=".sitemap">
         <img src="images/ChamberWirefram.png" alt="Home Page Wireframe" width="700">
-        </main>
+        </div>    
+    </main>
         <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</footer>
         <script src="scripts/"></script>
 </body>
