--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
     <meta name="description" content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development">
     <meta name="author" content="Rachael S Varady">
+    <meta property="og:title" content="Rachael S Varady - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpg">
+    <meta property="og:url" content="https://mazzac15.github.io/wdd230/">
     <link rel="icon" href="favicon.ico">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
@@ -25,8 +29,6 @@
         <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
         <li><a href="chamber/">Chamber</a></li>
         <li><a href="#" target="_blank">Form</a></li>
-        <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p27#p27"
-            target="_blank">Scripture</a></li>
         </ul>
     </nav>
     <main>
