--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <meta property="og:title" content="Rachael S Varady - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpg">
-    <meta property="og:url" content="https://mazzac15.github.io/wdd230/">
+    <meta property="og:url" content="https://raeland.github.io/wdd230/">
     <link rel="icon" href="favicon.ico">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
@@ -24,7 +23,8 @@
         <h1 id="h1">Rachael S Varady</h1>
     </header>
     <nav>
-        <ul>
+        <a id="menu"></a>
+        <ul class="navigation">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
         <li><a href="chamber/">Chamber</a></li>
