--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpg">
     <meta property="og:url" content="https://raeland.github.io/wdd230/">
     <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
