--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
-    <meta name="description" content="Course Assignment Portal for Rachael S Varady Fall 2023 WDD230 - Web Frontend Development">
+    <meta name="description" content="Rachael S Varady | WDD230 | Course Home Page">
     <meta name="author" content="Rachael S Varady">
     <meta property="og:title" content="Rachael S Varady - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
