--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,6 +15,9 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
+    <header>
+        <h1 id="h1">City of Apopka Chamber of Commerce</h1>
+    </header>
     <nav>
         <a id="menu"></a>
         <ul class="navigation">
