--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,7 +6,7 @@
     <title>City of Apopka Chamber of Commerce</title>
     <meta name="description" content="Rachael S Varady | WDD 230 | Chamber of Commerce">
     <meta name="author" content="Rachael S Varady">
-    <meta property="og:title" content="Cindy Mazza - WDD 230 - City of Apopka Chamber of Commerce">
+    <meta property="og:title" content="Rachael S Varady - WDD 230 - City of Apopka Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
     <meta property="og:url" content="https://raeland.github.io/wdd230/">
