--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="navigation">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
-        <li><a href="chamber/">Chamber</a></li>
+        <li><a href="chamber/index.html">Chamber</a></li>
         <li><a href="#" target="_blank">Form</a></li>
         </ul>
     </nav>
