--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
     <meta property="og:url" content="https://raeland.github.io/wdd230/">
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/base.css" rel="stylesheet">
     <link href="styles/larger.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
 <body>
