--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <header>
         <img src=images/profile.jpg alt="Rachael Varady Profile Image" width="75" height="175">
         <h1 id="h1">Rachael S Varady</h1>
+        <img src="images/dark.svg" alt="dark mode" id="darkBtn">
     </header>
     <nav>
         <a id="menu"></a>
@@ -32,11 +33,16 @@
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
-        <section>
-            <h3 class="card">Learning Activities</h3>
+        <section class="card">
+            <h3>Learning Activities</h3>
             <ul class="activities">
-                <li><a href="#">Activity 1</a></li>
-                <li><a href="#">Activity 2</a></li>
+                <li><a href="week01/holygrail.html">Week 01</a></li>
+                <li>Week 02<a href="#">Week 02</a></li>
+                <li>Week 02<a href="#">Week 03</a></li>
+                <li>Week 02<a href="#">Week 04</a></li>
+                <li>Week 02<a href="#">Week 05</a></li>
+                <li>Week 02<a href="#">Week 06</a></li>
+                <li><a href="#">Week 07</a></li>
             </ul>
         </section>
         <section class="card">
