--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul class="activities">
-                <li><a href="week01/holygrail.html">Week 01</a></li>
-                <li>Week 02<a href="#">Week 02</a></li>
-                <li>Week 02<a href="#">Week 03</a></li>
-                <li>Week 02<a href="#">Week 04</a></li>
-                <li>Week 02<a href="#">Week 05</a></li>
-                <li>Week 02<a href="#">Week 06</a></li>
-                <li><a href="#">Week 07</a></li>
+                <li>Week 01<a href="week01/holygrail.html">Layout</a> | <a href="week01/media-query.html">Media Query</a> | <a href="week01/js-pen.html">JS Pen</a></li>
+                <li>Week 02<a href="week02/design.html">Design</a> | <a href="week02/hamburger-menu.html">Hamburger Menu</a> | <a href="week02/bom.html">BOM JS</a></li>
+                <li>Week 03<a href="w"></a></li>| <a href="week03/lazyload.html">Lazy Load</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">Local Storage</a></p>
+                <li>Week 04<a href="#"></a></li>
+                <li>Week 05<a href="#"></a></li>
+                <li>Week 06<a href="#"></a></li>
+                <li>Week 07<a href="#"></a></li>
             </ul>
         </section>
         <section class="card">
             <h3>Information</h3>
-            <p>Weather:</p>
+            <p>Weather: <span id="weather">Always Sunny</span></p>
             <p>Number of Visits:</p>
         </section>
     </main>
