--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -8,14 +8,13 @@
         <meta name="author" content="Rachael S Varady">
         <link href="styles/chamber-site.css" rel="stylesheet">
         <link href="styles/chamber-site-large.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
     </head>
     <body>
       <header><h1>City of Apopka Chamber Site Plan</h1></header>
         <nav></nav>
     <main>
+        <br>
         <h2>Site Name</h2>
         <p>City of Apopka Chamber of Commerce Page, to show visitors all the wonderful places in Apopka, Florida, USA that they should want to work, play, and live.
         </p>
@@ -29,24 +28,25 @@
         <hr>               
         <h2>Color Schema</h2>  
         <h3>Color Palette</h3>
-        <a href="https://coolors.co/3a5b7e-e4f2f1-66a393-a4b2b6-1eaea0" target="_blank">https://coolors.co/3a5b7e-e4f2f1-66a393-a4b2b6-1eaea0</a>
+        <p><a href="https://coolors.co/3a5b7e-e4f2f1-66a393-a4b2b6-1eaea0" target="_blank">https://coolors.co/3a5b7e-e4f2f1-66a393-a4b2b6-1eaea0</a></p>
         <table class="sitecolors">
             <tbody>
                 <tr>
                     <td class="primary">Primary Color: #3A5B7E</td>
-                    <td class="secondary">Secondary Color: #E4F2F1,</td>
+                    <td class="secondary">Secondary Color: #E4F2F1</td>
                     <td class="accent1">Accent Color 1: #66A393</td>
                     <td class="accent2">Accent Color 2: #A4B2B6</td>
                 </tr>
             </tbody>
         </table>
         <hr>
-        <h3>Typography</h3>
-        <h4>Acme Google Font - Headings Example Font</h4>
-        <h4>Inter Google Font - Normal Text/Paragraph Example Font</h4>
-            <p>Example text - Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, veritatis</p>
-        <h4>Colored Callout Example Font</h4>
-            <p>Example text - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati</p>
+        <h2>Typography</h2>
+        <h3>Heading Font</h3>
+        <h4>Sawarabi Mincho</h4>
+            <p id="sawarabi">Example text - Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, veritatis</p>
+        <h3>Paragraph Font</h3>
+        <h4>Quicksand</h4>
+            <p id="quicksand">Example text - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati</p>
             <hr>
         <h3>Navigation</h3>
         <nav>
@@ -59,7 +59,7 @@
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <div class=".sitemap">
-        <img src="images/ChamberWirefram.png" alt="Home Page Wireframe" width="700">
+        <img src="images/ChamberWirefram.png" alt="Mobile and Large Home Page Wireframe" width="700">
         </div>    
     </main>
         <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</footer>
