--- a/week01/media-query.html
+++ b/week01/media-query.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WDD 230-1B | Media Query Example</title>
+  <title>WDD 230-1B | Rachael S Varady | Media Query Example</title>
   <meta name="description" content="Media query learning activity example page">
   <meta name="author" content="Rachael S Varady">
- 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
