--- a/week01/js-pen.html
+++ b/week01/js-pen.html
@@ -24,7 +24,6 @@
 </main>
 <aside></aside>
 <!-- partial -->
-  <script  src="styles/script.js"></script>
-
+  <script  src="styles/js-pen.css"></script>
 </body>
 </html>
