--- a/week01/js-pen.html
+++ b/week01/js-pen.html
@@ -12,7 +12,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <h2>Applied JavaScript</h2>
-<aside></aside>
+<aside>'Welcome to <em>my</em> neighborhood!'</aside>
 <main>
 	<div id="today1" class="step-reset step"></div>
 	<div id="today2" class="step"></div>
@@ -22,7 +22,7 @@
 	<div id="divs" class="step"></div>
 	<div id="c-names" class="step"></div>
 </main>
-<aside></aside>
+<aside>'Thank you for visiting <em>my</em> neighborhood!'</aside>
 <!-- partial -->
   <script  src="styles/js-pen.css"></script>
 </body>
