--- a/week02/hamburger-menu.html
+++ b/week02/hamburger-menu.html
@@ -2,8 +2,9 @@
 <html lang="en-us" >
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CodePen - 🔒Responsive Menu using &#39;Hamburger&#39; - sol</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="styles/hamburger-menu.css">
 </head>
 <body>
