--- a/week01/js-pen.html
+++ b/week01/js-pen.html
@@ -21,7 +21,7 @@
 	<div id="divs" class="step"></div>
 	<div id="c-names" class="step"></div>
 </main>
-<aside>'Thank you for visiting <em>my</em> neighborhood!'</aside>
+<aside>Thank you for visiting <em>my</em> neighborhood!</aside>
 <!-- partial -->
 <script src="scripts/js-pen.js"></script>
 </body>
