dsigna;iorg;iuaef

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -59,10 +59,11 @@
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <div class=".sitemap">
-        <img src="images/ChamberWirefram.png" alt="Mobile and Large Home Page Wireframe" width="700">
+        <img src="images/ChamberWirefram.png" alt="Large Home Page Wireframe" width="700">
+        <img src="images/ChamberWireframeMobile.jpg" alt="Mobile Home Page Wireframe" width="">
         </div>    
     </main>
-        <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</footer>
+        <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 01 - Fall 2023</footer>
         <script src="scripts/"></script>
 </body>
 </html>
