--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -14,6 +14,10 @@
     <nav>Main Navigation</nav>
     <main contenteditable>Main Content Area</main>
     <div class="right-sidebar" contenteditable>Right Sidebar</div>
-    <footer contenteditable>Footer Content — Header.com</footer>
+    <footer contenteditable>Footer Content — Header.com
+        <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 01 - Fall 2023</p>
+        <p id="lastModified"></p>
+        <script src="scripts/getDates.js"></script>
+    </footer>
   </body>
 </html>
