--- a/week01/js-pen.html
+++ b/week01/js-pen.html
@@ -22,7 +22,11 @@
 	<div id="c-names" class="step"></div>
 </main>
 <aside>Thank you for visiting <em>my</em> neighborhood!</aside>
-<!-- partial -->
+<footer>
+	<p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 01 - Fall 2023</p>
+	<p id="lastModified"></p>
+	<script src="scripts/getDates.js"></script>
+</footer>
 <script src="scripts/js-pen.js"></script>
 </body>
 </html>
