--- a/week01/media-query.html
+++ b/week01/media-query.html
@@ -25,7 +25,11 @@
             <p>I beheld that they were filled with joy and gladness, and were rejoicing together because the day of their deliverance was at hand.</p>
         </section>
     </main>
-        <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</footer>
+    <footer>
+        <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 01 - Fall 2023</p>
+        <p id="lastModified"></p>
+        <script src="scripts/getDates.js"></script>
+    </footer>
         <script src="scripts/"></script>
 </body>
 </html>
