--- a/week02/bom.html
+++ b/week02/bom.html
@@ -14,6 +14,11 @@
 	    <button type="submit">Add Chapter</button>
 	    <ul id="list"></ul>
     </main>
+    <footer>
+        <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 02 - Fall 2023</p>
+        <p id="lastModified"></p>
+        <script src="scripts/getDates.js"></script>
+    </footer>
     <script src="scripts/bom.js"></script>
 </body>
 </html>
