--- a/week02/design.html
+++ b/week02/design.html
@@ -38,5 +38,7 @@
 	</div>
 </main>
 <footer>
-	Footer Content
+    <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 02 - Fall 2023</p>
+    <p id="lastModified"></p>
+    <script src="scripts/getDates.js"></script>
 </footer>
