--- a/week02/hamburger-menu.html
+++ b/week02/hamburger-menu.html
@@ -22,8 +22,11 @@
 </nav>
 <h2>About Us</h2>
 <div class="stuff"></div>
-<!-- partial -->
+<footer>
+	<p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 02 - Fall 2023</p>
+	<p id="lastModified"></p>
+	<script src="scripts/getDates.js"></script>
+</footer>
   <script  src="scripts/hamburger-menu.js"></script>
-
 </body>
 </html>
