--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -40,11 +40,11 @@
         
     </main>
     <footer>
-        <p>Cindy Mazza</p>
-        <p>WDD 230 week03 assignment</p>
-        <p>&#169;<span id="currentYear"></span><span id="nameLocation"> Cindy Mazza, Florida</span></p>
-        <p><span id="lastModified"></span></p>
-    </footer>
+        <footer>
+            <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 03 - Fall 2023</p>
+            <p id="lastModified"></p>
+            <script src="scripts/getDates.js"></script>
+        </footer>
     <script  src="scripts/lazyload.js"></script>
 </body>
 </html>
