--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -59,7 +59,7 @@
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
         <div class=".sitemap">
-        <img src="images/ChamberWirefram.png" alt="Large Home Page Wireframe" width="700">
+        <img src="images/ChamberWireframe.jpg" alt="Large Home Page Wireframe" width="700">
         <img src="images/ChamberWireframeMobile.jpg" alt="Mobile Home Page Wireframe" width="">
         </div>    
     </main>
