--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -60,7 +60,7 @@
         <h3>Home Page Wireframe</h3>
         <div class=".sitemap">
         <img src="images/ChamberWireframe.jpg" alt="Large Home Page Wireframe" width="700">
-        <img src="images/ChamberWireframeMobile.jpg" alt="Mobile Home Page Wireframe" width="">
+        <img src="images/ChamberWireframeMobile.jpg" alt="Mobile Home Page Wireframe" width="300">
         </div>    
     </main>
         <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 01 - Fall 2023</footer>
