--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="activities">
                 <li>Week 01<a href="week01/holygrail.html">Layout</a> | <a href="week01/media-query.html">Media Query</a> | <a href="week01/js-pen.html">JS Pen</a></li>
                 <li>Week 02<a href="week02/design.html">Design</a> | <a href="week02/hamburger-menu.html">Hamburger Menu</a> | <a href="week02/bom.html">BOM JS</a></li>
-                <li>Week 03<a href="w"></a></li>| <a href="week03/lazyload.html">Lazy Load</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">Local Storage</a></p>
+                <li>Week 03<a href="week03/responsive-images.html">WebP</a></li>| <a href="week03/lazyload.html">Lazy Load</a> | <a href="week03/responsive-images.html">Responsive Images</a> | <a href="week03/bom.html">Local Storage</a>
                 <li>Week 04<a href="#"></a></li>
                 <li>Week 05<a href="#"></a></li>
                 <li>Week 06<a href="#"></a></li>
