--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Rachael S Varady - WDD230 - Web Frontend Development 1</title>
+    <title>Rachael S Varady - WDD230 - Web Frontend Development</title>
     <meta name="description" content="Rachael S Varady | WDD230 | Web Frontend Development">
     <meta name="author" content="Rachael S Varady">
-    <meta property="og:title" content="Rachael S Varady - WDD 230 - Web Frontend Development">
+    <meta property="og:title" content="This is an updated version of the home page I created last week. WDD230 Course Home Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
     <meta property="og:url" content="https://raeland.github.io/wdd230/">
