--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,7 +23,7 @@
         <ul class="navigation">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Work</a></li>
-          <li><a href="#">Play</a></li>
+          <li><a href="#">Directory</a></li>
           <li><a href="#">Events</a></li>
         </ul>
     </nav>
@@ -31,6 +31,8 @@
         
     </main>
     <footer>
+        <p>Contact: sol99006@byui.edu</p>
+        <p>BYU-Idaho Project for WDD 230 Frontend Website Development 1</p>
         <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
         <script src="scripts/getDates.js"></script>
