--- a/week02/bom.html
+++ b/week02/bom.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book of Mormon Top 10</title>
-    <link rel="stylesheet" href="styles/bom.css">
+    <meta name="description" content="List of Top Ten Book of Mormon Scriptures">
+    <meta name="author" content="Rachael S Varady">
+    <meta property="og:title" content="Rachael S Varady - WDD230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
+    <meta property="og:url" content="https://raeland.github.io/wdd230/">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/bom.css">  
 </head>
 <body>
     <h1>📖 Book of Mormon - Top 10</h1>
@@ -17,8 +26,8 @@
     <footer>
         <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 02 - Fall 2023</p>
         <p id="lastModified"></p>
-        <script src="scripts/getDates.js"></script>
     </footer>
+    <script src="scripts/getDates.js"></script>
     <script src="scripts/bom.js"></script>
 </body>
 </html>
