--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/menu.js"></script>
 </body>
 </html>
 <!--
