--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
         </ul>
     </nav>
     <main>
+        <div class="hero">
+            <picture>
+                <source srcset="images/hero-small.webp" media="(max-width: 500px)">
+                <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
+                <img src="images/hero-large.webp" alt="Feather River California Temple" width="1500" height="998">
+            </picture>
+        <div class="herolabel">
+            <p>Feather River California</p>
+        </div>
+        </div>
         <h2>WDD 230: Web Frontend Development</h2>
         <section class="card">
             <h3>Learning Activities</h3>
@@ -50,6 +60,7 @@
             <p>Weather: <span id="weather">Always Sunny</span></p>
             <p>Number of Visits:</p>
         </section>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d111984.65253155297!2d-81.60617371731246!3d28.70399016539981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77739cc157c19%3A0xd71d0f8ffc80e888!2sApopka%2C%20FL!5e0!3m2!1sen!2sus!4v1700536635540!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</p>
