form personalized footer

--- a/form-start/index.html
+++ b/form-start/index.html
@@ -78,7 +78,8 @@
 
 
     <footer>
-        &copy; &bull; Paul Cheney &bull; 123-555-6789
+        <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B &bull; Week 04 &bull; Fall 2023</p>
+        <p id="lastModified"></p>
     </footer>
     <script src="scripts/scripts.js"></script>
 </body>
