--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
       <header><h1>Page Title | Heading ONE</h1></header>
         <nav></nav>
     <main></main>
-        <footer>&copy; 2023 | Rachael S Varady | BYU-Idaho | WDD 230-1B - Week 04 Team Build Activity - Fall 2023</footer>
+        <footer>&copy; 2023 &bull; Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B - Week 04 Team Build Activity &bull; Fall 2023</footer>
         <script src="scripts/"></script>
 </body>
 </html>
