--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Rachael S Varady - WDD 230 - City of Apopka Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
-    <meta property="og:url" content="https://raeland.github.io/wdd230/">
+    <meta property="og:url" content="https://raeland.github.io/wdd230/chamber/">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
@@ -28,14 +28,25 @@
         </ul>
     </nav>
     <main>
-        
+        <section class="card">
+            <h3>Current Events</h3>
+            <p></p>
+            <p></p>
+        </section>
+        <section class="card">
+            <h3>Information</h3>
+            <p>Weather: <span id="weather">Always Sunny</span></p>
+            <p>Number of Visits:</p>
+        </section>
+
     </main>
     <footer>
         <p>Contact: sol99006@byui.edu</p>
         <p>BYU-Idaho Project for WDD 230 Frontend Website Development 1</p>
-        <p>&copy; <span id="currentYear"></span> | Rachael S Varady | BYU-Idaho | WDD 230-1B - Fall 2023</p>
+        <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; CHAMBER PROJECT &bull; WDD 230-1B - Fall 2023</p>
         <p id="lastModified"></p>
-        <script src="scripts/getDates.js"></script>
     </footer>
+    <script  src="scripts/hamburger-menu.js"></script>
+    <script src="scripts/getDates.js"></script>
 </body>
 </html>
