--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,6 +29,11 @@
     </nav>
     <main>
         <section class="card">
+            <h3>Join the Apopka Chamber of Commerce</h3>
+            <p>Join here</p>
+            <p></p>
+        </section>
+        <section class="card">
             <h3>Current Events</h3>
             <p></p>
             <p></p>
@@ -38,7 +43,12 @@
             <p>Weather: <span id="weather">Always Sunny</span></p>
             <p>Number of Visits:</p>
         </section>
-
+        <section class="card">
+            <h3>Company Spotlights</h3>
+            <p>one</p>
+            <p>two</p>
+            <p>three</p>
+        </section>
     </main>
     <footer>
         <p>Contact: sol99006@byui.edu</p>
