--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
         <a id="menu"></a>
         <ul class="navigation">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Work</a></li>
+          <li><a href="join.html">Join</a></li>
           <li><a href="#">Directory</a></li>
           <li><a href="#">Events</a></li>
         </ul>
