--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,8 +22,8 @@
         <a id="menu"></a>
         <ul class="navigation">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Work</a></li>
-          <li><a href="#">Directory</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="discover.html">Discover</a></li>
           <li><a href="#">Events</a></li>
         </ul>
     </nav>
