--- a/chamber/join.html
+++ b/chamber/join.html
@@ -23,7 +23,7 @@
         <ul class="navigation">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="join.html">Join</a></li>
-          <li><a href="#">Directory</a></li>
+          <li><a href="discover.html">Discover</a></li>
           <li><a href="#">Events</a></li>
         </ul>
     </nav>
