--- a/form.html
+++ b/form.html
@@ -2,23 +2,63 @@
 <html lang=
 >
 <head>
-  <meta charset=
- >
-  <meta name=
- content=
->
-  <title>Title of Page</title>
-  <meta name="description" content="Use keywords to describe page">
-  <meta name=
- content=
->
-  <link rel="stylesheet" href="styles/filename">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Rachael S Varady - WDD230 - Web Frontend Development</title>
+    <meta name="description" content="A webform to signup for updates to my course website">
+    <title>WebForm</title>
+    <meta name="description" content="Use keywords to describe page">
+    <meta name="author" content="Rachael S Varady">
+    <meta property="og:title" content="Rachael S Varady - WDD230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
+    <meta property="og:url" content="https://raeland.github.io/wdd230/">
+    <link rel="icon" href="favicon.ico">
+    <link href="styles/normalize.css" rel="stylesheet">
+    <link href="styles/base.css" rel="stylesheet">
+    <link href="styles/larger.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
 </head>
   <body>
-      <header><h1>Page Title | Heading ONE</h1></header>
-        <nav></nav>
-    <main></main>
-        <footer>&copy; 2023 &bull; Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B - Week 04 Team Build Activity &bull; Fall 2023</footer>
-        <script src="scripts/"></script>
+    <header><h1>Page Title | Heading ONE</h1></header>
+    <a id="menu"></a>
+      <nav>
+        <ul class="navigation">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
+        <li><a href="chamber/index.html">Chamber</a></li>
+        <li><a href="#" target="_blank">Form</a></li>
+        </ul>
+      </nav>
+    <main>
+      <h1>Web a Member of Apopka Chamber of Commerce</h1>
+      <form method="get" action="thankyou.html">
+          <fieldset>
+              <legend>Join Apopka's Chamber of Commerce</legend>
+              <label class="top">First Name* <input type="text" name="fname" required></label>
+              <label class="top">Last Name* <input type="text" name="lname" required></label>
+              <label class="top">Business/Organization Name*<input type="text" name="business" required></label>
+              <label class="top">Job Title<input type="text" name="title"></label>
+              <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required></label>
+              <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
+          <fieldset>
+              <legend>Membership Level</legend>
+              <label class="sbs"><input type="radio" name="membership" value="np"> NP Membership</label>
+              <label class="sbs"><input type="radio" name="membership" value="bronze"> Bronze Membership</label>
+              <label class="sbs"><input type="radio" name="membership" value="silver"> Silver Membership</label>
+              <label class="sbs"><input type="radio" name="membership" value="gold"> Gold Membership</label>
+          </fieldset>
+              <label class="top" for="comments">Business/Organization Description</label>
+              <textarea id="comments" name="comments"></textarea>
+              <input type="submit" value="Apply For Membership" class="submitBtn">
+          </fieldset>
+      </form>
+    </main>
+        <footer>        
+          <p>&copy; &bull; <span id="currentYear"></span> Rachael S Varady &bull; BYU-Idaho &bull; WDD 230-1B - Fall 2023</p>
+          <p id="lastModified"></p>
+      </footer>
+      <script src="scripts/getDates.js"></script>
+      <script src="scripts/menu.js"></script>
 </body>
 </html>
