--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang=en-US>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Rachael S Varady - WDD230 - Web Frontend Development</title>
     <meta name="description" content="A webform to signup for updates to my course website">
     <title>WebForm</title>
