--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Rachael S Varady - WDD230 - Web Frontend Development</title>
     <meta name="description" content="This is an updated version of the home page I created last week. WDD230 Course Home Page">
     <meta name="author" content="Rachael S Varady">
