--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -1,21 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
-    <!-- This start file was build by Paul Cheney  -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You For Joining Apopka's Chamber of Commerce</title>
-
-    <meta name="description" content="Fill Me In">
-    <meta name="author" content="John Doe">
-
+    <meta name="description" content="Join the Commerce">
+    <meta name="author" content="Rachael S Varady">
+    <meta property="og:title" content="Rachael S Varady - WDD 230 - City of Apopka Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://raw.githubusercontent.com/raeland/wdd230/main/images/apopka.jpeg">
+    <meta property="og:url" content="https://raeland.github.io/wdd230/chamber/">
     <link href="styles/normalize.css" rel="stylesheet">
-    <link href="styles/base.css" rel="stylesheet">
-    <link href="styles/larger.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
