--- a/form.html
+++ b/form.html
@@ -31,8 +31,8 @@
         </ul>
       </nav>
     <main>
-      <h1>Web a Member of Apopka Chamber of Commerce</h1>
-      <form method="get" action="thankyou.html">
+      <h1>Webform</h1>
+      <form method="get" action="record.html">
           <fieldset>
               <legend>Join Apopka's Chamber of Commerce</legend>
               <label class="top">First Name* <input type="text" name="fname" required></label>
