--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <nav>
         <ul class="navigation">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
-        <li><a href="chamber/index.html">Chamber</a></li>
-        <li><a href="#" target="_blank">Form</a></li>
+        <li><a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a></li>
+        <li><a href="chamber/index.html" target="_blank">Chamber</a></li>
+        <li><a href="form.html" target="_blank">Form</a></li>
         </ul>
     </nav>
     <main>
