--- a/form.html
+++ b/form.html
@@ -24,10 +24,10 @@
     <a id="menu"></a>
       <nav>
         <ul class="navigation">
-          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a></li>
           <li><a href="chamber/index.html" target="_blank">Chamber</a></li>
-          <li><a href="form.html" target="_blank">Form</a></li>
+          <li class="active"><a href="form.html" target="_blank">Form</a></li>
         </ul>
       </nav>
     <main>
